# synth

./: .gitattributes  .gitignore  Cargo.toml  README.md  Taskfile.dist.yaml  crates.js  help.html  index.html  prek.toml  settings.html  src-files.js
.github/: dependabot.yml
.github/workflows/: format.yml  fuzz-check.yml  gh-pages.yml  lint.yml  test.yml
.task/checksum/: fmt  sort-toml
examples/: tune.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_filter_stability.rs  fuzz_osc_safety.rs  fuzz_params_serde.rs
search.index/: 065d557c4f.js  08f9223efe.js  123564e49a.js  12c473467f.js  21c1f2da31.js  2893682237.js  2eb30f0c52.js  384730b1ed.js  3e8e5d7ea5.js  451e68e93f.js  48bf8f5c08.js  4b9d82125d.js  56d7a1d627.js  5c3f5b0f70.js  725e17beb2.js  7585009b55.js  78d8c62e17.js  7f659aa5e8.js  root.js
search.index/crateNames/: 472bb6785d.js
search.index/desc/: 2c3d2861a4.js
search.index/entry/: 9e82a11be8.js
search.index/function/: 3fa0487c17.js
search.index/generic_inverted_index/: f95b3b2765.js
search.index/name/: f6a0933551.js
search.index/normalizedName/: fef633ef7e.js
search.index/path/: 5f6145fc7f.js
search.index/type/: 3257b7eb9e.js
src/: app.rs  audio.rs  lib.rs  main.rs  params.rs  preset_store.rs  presets.rs  viz.rs
src/app/: input.rs  mod.rs  state.rs  ui.rs
src/audio/: drums.rs  engine.rs  env.rs  filter.rs  fx.rs  mod.rs  osc.rs  voice.rs
src/presets/: mod.rs  sid.rs  store.rs
src/synth/: audio.rs.html  lib.rs.html  params.rs.html  presets.rs.html
src/synth/audio/: drums.rs.html  engine.rs.html  env.rs.html  filter.rs.html  fx.rs.html  osc.rs.html  voice.rs.html
src/synth/presets/: sid.rs.html
src/viz/: scope.rs
synth/: all.html  index.html  sidebar-items.js
synth/audio/: index.html  sidebar-items.js
synth/audio/drums/: constant.DRUM_GAIN.html  constant.HAT_CLOSED_AMP_CUTOFF.html  constant.HAT_CLOSED_DECAY_SECONDS.html  constant.HAT_CLOSED_HPF_ALPHA.html  constant.HAT_OPEN_AMP_CUTOFF.html  constant.HAT_OPEN_DECAY_SECONDS.html  constant.HAT_OPEN_HPF_ALPHA.html  constant.KICK_AMP_CUTOFF.html  constant.KICK_AMP_DECAY_SECONDS.html  constant.KICK_END_HZ.html  constant.KICK_PITCH_DECAY_SECONDS.html  constant.KICK_START_HZ.html  index.html  sidebar-items.js  struct.DrumMachine.html  struct.HatVoice.html  struct.KickVoice.html
synth/audio/engine/: constant.POLYPHONY.html  (+9 more)
synth/params/: enum.AudioEvent.html  enum.DrumHit.html  enum.FilterMode.html  enum.LfoTarget.html  enum.Waveform.html  index.html  sidebar-items.js  struct.EnvParams.html  struct.FilterParams.html  struct.FxParams.html  struct.GlobalParams.html  struct.LfoParams.html  struct.OscParams.html  struct.Patch.html  struct.SynthParams.html
synth/presets/: index.html  sidebar-items.js
(+44 files in other folders)
