[package]
name = "synth"
version = "0.1.0"
edition = "2024"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
description = "A terminal-based polyphonic synthesizer"
repository = "https://github.com/sunsided/synth"
license = "EUPL-1.2"
readme = "README.md"
keywords = ["synthesizer", "audio", "tui", "terminal", "midi"]
categories = ["command-line-utilities", "multimedia::audio"]

[lib]
name = "synth"
path = "src/lib.rs"

[[bin]]
name = "synth"
path = "src/main.rs"

[dependencies]
anyhow = "1"
cpal = "0.17"
crossbeam-channel = "0.5"
crossterm = "0.29"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[example]]
name = "tune"
path = "examples/tune.rs"

[lints.clippy]
# Enforce the full pedantic lint group project-wide.
# Intentional suppressions for API/domain naming and DSP casts are handled
# with item-level #[allow(...)] attributes at the relevant declaration sites.
pedantic = "warn"
