[package]
name = "synth-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"

[dependencies.synth]
path = ".."

# Disable default features to avoid pulling in audio-device initialization
# during fuzz runs (no terminal/audio device available in the fuzzer sandbox).
default-features = false

# Fuzz targets are compiled as separate binaries; keep them out of normal
# workspace builds and disable doc/test targets to speed up fuzzer compilation.
[[bin]]
name = "fuzz_filter_stability"
path = "fuzz_targets/fuzz_filter_stability.rs"
test = false
doc = false

[[bin]]
name = "fuzz_osc_safety"
path = "fuzz_targets/fuzz_osc_safety.rs"
test = false
doc = false

[[bin]]
name = "fuzz_params_serde"
path = "fuzz_targets/fuzz_params_serde.rs"
test = false
doc = false

# This workspace declaration is required by cargo-fuzz; it prevents the fuzz
# package from being picked up by the parent workspace (which has none, but
# is good practice regardless).
[workspace]
